--- a/content/experiments/html-named-colors.njk
+++ b/content/experiments/html-named-colors.njk
@@ -82,7 +82,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "AntiqueWhite",
-      "class": "light yellow",
+      "class": "light brown",
       "contrastBlack": 17.93,
       "contrastWhite": 1.17,
       "bestContrast": "best-black"
@@ -94,7 +94,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "Aquamarine",
-      "class": "blue green bright",
+      "class": "green bright",
       "contrastBlack": 17.16,
       "contrastWhite": 1.22,
       "bestContrast": "best-black"
@@ -112,7 +112,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "Bisque",
-      "class": "light yellow",
+      "class": "light yellow brown",
       "contrastBlack": 17.15,
       "contrastWhite": 1.22,
       "bestContrast": "best-black"
@@ -142,13 +142,13 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-white"
     }, {
       "name": "Brown",
-      "class": "red orange dark",
+      "class": "brown dark",
       "contrastBlack": 2.96,
       "contrastWhite": 7.08,
       "bestContrast": "best-white"
     }, {
       "name": "BurlyWood",
-      "class": "yellow",
+      "class": "brown yellow",
       "contrastBlack": 11.31,
       "contrastWhite": 1.86,
       "bestContrast": "best-black"
@@ -166,13 +166,13 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "Chocolate",
-      "class": "orange",
+      "class": "orange brown",
       "contrastBlack": 5.78,
       "contrastWhite": 3.63,
       "bestContrast": "best-black"
     }, {
       "name": "Coral",
-      "class": "orange bright",
+      "class": "orange",
       "contrastBlack": 8.4,
       "contrastWhite": 2.5,
       "bestContrast": "best-black"
@@ -214,7 +214,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "DarkGoldenRod",
-      "class": "yellow",
+      "class": "yellow brown",
       "contrastBlack": 6.45,
       "contrastWhite": 3.25,
       "bestContrast": "best-black"
@@ -274,7 +274,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-white"
     }, {
       "name": "DarkSalmon",
-      "class": "orange",
+      "class": "orange brown",
       "contrastBlack": 9.11,
       "contrastWhite": 2.31,
       "bestContrast": "best-black"
@@ -346,7 +346,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "FireBrick",
-      "class": "red orange",
+      "class": "red orange brown",
       "contrastBlack": 3.14,
       "contrastWhite": 6.68,
       "bestContrast": "best-white"
@@ -532,7 +532,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "LightSeaGreen",
-      "class": "blue green",
+      "class": "green",
       "contrastBlack": 8.01,
       "contrastWhite": 2.62,
       "bestContrast": "best-black"
@@ -598,7 +598,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-white"
     }, {
       "name": "MediumAquaMarine",
-      "class": "blue green",
+      "class": "green",
       "contrastBlack": 10.88,
       "contrastWhite": 1.93,
       "bestContrast": "best-black"
@@ -760,7 +760,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "Peru",
-      "class": "orange",
+      "class": "brown",
       "contrastBlack": 7.02,
       "contrastWhite": 2.99,
       "bestContrast": "best-black"
@@ -802,7 +802,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "RosyBrown",
-      "class": "orange red",
+      "class": "brown red",
       "contrastBlack": 7.46,
       "contrastWhite": 2.81,
       "bestContrast": "best-black"
@@ -814,7 +814,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-white"
     }, {
       "name": "SaddleBrown",
-      "class": "dark",
+      "class": "dark brown",
       "contrastBlack": 2.96,
       "contrastWhite": 7.1,
       "bestContrast": "best-white"
@@ -826,7 +826,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "SandyBrown",
-      "class": "uncategorized",
+      "class": "brown",
       "contrastBlack": 10.33,
       "contrastWhite": 2.03,
       "bestContrast": "best-black"
@@ -844,7 +844,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "Sienna",
-      "class": "yellow",
+      "class": "brown",
       "contrastBlack": 3.74,
       "contrastWhite": 5.62,
       "bestContrast": "best-white"
@@ -898,13 +898,13 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "Tan",
-      "class": "light yellow",
+      "class": "light brown",
       "contrastBlack": 10.65,
       "contrastWhite": 1.97,
       "bestContrast": "best-black"
     }, {
       "name": "Teal",
-      "class": "green blue",
+      "class": "green",
       "contrastBlack": 4.4,
       "contrastWhite": 4.77,
       "bestContrast": "best-white"
@@ -934,7 +934,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       "bestContrast": "best-black"
     }, {
       "name": "Wheat",
-      "class": "light yellow",
+      "class": "light yellow brown",
       "contrastBlack": 15.98,
       "contrastWhite": 1.31,
       "bestContrast": "best-black"
@@ -1008,7 +1008,7 @@ document.querySelectorAll("[data-try]").forEach(button => {
       Pinks
     </button>
      <button class="namedColourButton" data-colour="brown">
-        <span style="background-color: brown"></span>
+        <span style="background-color: sienna"></span>
       Browns
     </button>
       <button class="namedColourButton" data-colour="bright">
