--- a/assets/css/pages/_homepage.css
+++ b/assets/css/pages/_homepage.css
@@ -2,11 +2,10 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  gap: 15px;
+  gap: 1rem;
   position: absolute;
   top: 36px;
-  right: 36px;
-  padding-right: 4px;
+  right: 1rem;
 }
 
 @media (min-width: 992px) {
