--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -18,10 +18,10 @@
                     <img class="u-photo" src="{{metadata.avatar}}" alt="">
 
                     <div class="reading-width">
-                        <p class="p-note">
-                            <span class="p-name p-nickname">Frills</span> is a <span class="p-job-title">Senior Frontend Developer and Accessibility Specialist</span> from <span class="p-country-name">Wales, UK</span>, bothered about <span class="p-role">web accessibility, sustainability and climate impact</span>.
+                        <p class="p-note mb-0">
+                            <span class="p-name p-nickname">Frills</span> is a very ordinary mortal human. Born of Celtic blood, woven from stardust and old magic, dwelling amidst the mythical green hills of <span class="p-country-name">Wales</span>.
                         </p>
-                        {# <p class="p-summary">{{description}}</p> #}
+                        <p>Please enjoy her witterings.</p>
                     </div>
                 </div>
             </div>
