--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -6,7 +6,7 @@
     </a>
     {% include "structure/global/nav.njk" %}
     <div class="settings noscriptHide">
-        <button id="colorSchemeButton" class="button ghost toggle toggle--colorscheme">
+        <button id="colorSchemeButton" class="toggle toggle--colorscheme">
             Toggle dark theme
         </button>
     </div>
