--- a/assets/css/components/_button.css
+++ b/assets/css/components/_button.css
@@ -1,6 +1,4 @@
-button,
-.button,
-input[type="submit"] {
+.button {
   font-family:var(--font-family);
   text-decoration: none;
   will-change: transform;
@@ -19,17 +17,13 @@ input[type="submit"] {
   font-size: 1rem;
 }
 
-.button:hover,
-button:hover {
+.button:hover {
   background-color: #eec900;
 }
 
 .button:hover,
 .button:active,
-.button[aria-pressed="true"],
-button:hover,
-button:active,
-button[aria-pressed="true"] {
+.button[aria-pressed="true"] {
   text-decoration: none;
   color: black;
   transform: translate(4px, 4px);
@@ -59,7 +53,6 @@ button.ghost {
   color: var(--text);
   border: 0;
   box-shadow: inset 0 0 0 2px var(--link), 4px 4px 0 0 var(--linkaccent);
-  cursor: pointer;
   transition: 0.3s ease transform, 0.3s ease background-color, 0.3s ease box-shadow;
 }
 
@@ -82,31 +75,39 @@ button.hidden {
   padding: 0;
   margin: 0;
   background-color: transparent;
+  border: 0;
   box-shadow: none;
   color: var(--text);
   font-size: inherit;
 }
 button.hidden:hover,
 button.hidden:focus,
-button.hidden:active {
+button.hidden:active,
+button[aria-pressed="true"] {
+  border: 0;
   transform: none;
-  padding: 0;
-  margin: 0;
   background-color: transparent;
   box-shadow: none;
   color: var(--linkhover);
-  text-decoration: underline wavy 2px;
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-style: wavy;
+  text-underline-offset: 2px;
 }
 
 button.dotted {
   transform: none;
   padding: 1px 0;
   margin: 0;
+  border: 0;
   background-color: transparent;
   box-shadow: none;
   color: var(--text);
   font-size: inherit;
-  text-decoration: underline dotted 2px;
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-style: dotted;
+  text-underline-offset: 2px;
 }
 button.dotted:hover,
 button.dotted:focus,
@@ -117,8 +118,10 @@ button.dotted:active {
   background-color: transparent;
   box-shadow: none;
   color: var(--linkhover);
-  text-decoration: underline 2px;
-}
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 2px;
+  }
 
 /* Button groups */
 .button-group {
