--- a/assets/css/components/_details.css
+++ b/assets/css/components/_details.css
@@ -14,5 +14,8 @@ summary:focus,
 summary:active,
 details[open] summary {
   color: var(--linkhover);
-  text-decoration: underline wavy 2px;
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-style: wavy;
+  text-underline-offset: 2px;
 }
