--- a/assets/css/components/_links.css
+++ b/assets/css/components/_links.css
@@ -17,7 +17,8 @@
   background: var(--bg) !important;
   color: var(--text) !important;
   box-shadow: inset 0 0 0 1px var(--text) !important;
-  text-decoration: underline !important
+  text-decoration: underline !important;
+  text-underline-offset: 2px;
 }
 
 .links__image,
