--- a/assets/css/components/_nav.css
+++ b/assets/css/components/_nav.css
@@ -1,7 +1,5 @@
-@media (min-width: 1200px) {
-  .page__nav--top {
-    max-width: 700px;
-  }
+.page__nav--top {
+  max-width: 35rem;
 }
 
 .page__nav {
