--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -138,5 +138,8 @@
 .dashboard__item--latestposts .description a:focus,
 .dashboard__item--latestposts .description a:active {
   color: var(--linkhover);
-  text-decoration: underline wavy 2px;
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-style: wavy;
+  text-underline-offset: 2px;
 }
