--- a/content/experiments/valentines-ascii-heart.njk
+++ b/content/experiments/valentines-ascii-heart.njk
@@ -5,8 +5,8 @@ image:  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAlMAAAF3CAMAAAC2Sj5nAAAAUV
 date: 2024-02-12
 rss: true
 style: '.iheartu {column-width: 400px;}
-        .iheartu>*{margin-bottom: 1rem;}
-        pre { line-height: 1.1;}'
+        .iheartu>*{margin: 0 0 1rem 0; break-inside: avoid;}
+        pre { font-size: 0.75rem; line-height: 1.1;}'
 ---
 {% block main %}
 <pre role="img" aria-label="Happy Valentines Day">
