--- a/content/index.njk
+++ b/content/index.njk
@@ -37,7 +37,7 @@ scripts: '
 		') }}
 		</div>
 	</noscript>
-	<article class="dashboard__item dashboard__item--gallery">
+	<article class="dashboard__item dashboard__item--gallery mt-0">
 		<h2 class="visually-hidden">Gallery</h2>
 		<figure>
 			<img src="/images/piclog/piclog2.jpg" alt="Caucasian woman (me) stood with their back to the camera standing on a wooden jetty looking out at the lake with my labrador, Orla. A lens flare from the sun in the top left." loading="lazy" width="100" height="100">
@@ -108,7 +108,7 @@ scripts: '
 			'
 		)}}
 	</div>
-	<div class="dashboard__item">
+	<div class="dashboard__item dashboard__item--safari">
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small',
