--- a/content/sitemap-xml.njk
+++ b/content/sitemap-xml.njk
@@ -6,10 +6,9 @@ eleventyExcludeFromCollections: true
 <?xml version="1.0" encoding="UTF-8" ?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 {% for item in collections.all %}
-  {% if item %}
+  {% if item and item.url and not item.url.startsWith('/admin/') %}
     <url>
       <loc>{{ item.url | url }}</loc>
     </url>
   {% endif %}
 {% endfor %}
-</urlset>
